--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: base_camp
+name: campnotes
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,20 +18,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  meta: ^1.1.8
+  equatable: ^2.0.3
+  flutter_bloc: ^7.3.0
+  floor: ^1.1.0
+  provider: ^6.0.0
+  todos_app_core:
+    path: packages/todos_app_core/
 
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+dependency_overrides:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  floor_generator: ^1.1.0
+  build_runner: ^2.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
