--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,7 @@
-group 'com.battery.plugin.battery_test_plugin'
-version '1.0'
-
 buildscript {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
 
     dependencies {
@@ -12,24 +9,19 @@ buildscript {
     }
 }
 
-rootProject.allprojects {
+allprojects {
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
 }
 
-apply plugin: 'com.android.library'
+rootProject.buildDir = '../build'
+subprojects {
+    project.buildDir = "${rootProject.buildDir}/${project.name}"
+    project.evaluationDependsOn(':app')
+}
 
-android {
-    compileSdkVersion 30
-
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-
-    defaultConfig {
-        minSdkVersion 16
-    }
+task clean(type: Delete) {
+    delete rootProject.buildDir
 }
