--- a/example/android/app/src/main/AndroidManifest.xml
+++ b/example/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.battery.plugin.battery_test_plugin_example">
+    package="com.example.plugin_wifi_example">
    <application
-        android:label="battery_test_plugin_example"
+        android:label="plugin_wifi_example"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
