--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,5 +1,5 @@
-name: plugin_wifi_example
-description: Demonstrates how to use the plugin_wifi plugin.
+name: wifi_state_example
+description: Demonstrates how to use the wifi_state plugin.
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
@@ -12,9 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  plugin_wifi:
+  wifi_state:
     # When depending on this package from a real application you should use:
-    #   plugin_wifi: ^x.y.z
+    #   wifi_state: ^x.y.z
     # See https://dart.dev/tools/pub/dependencies#version-constraints
     # The example app is bundled with the plugin so we use a path dependency on
     # the parent directory to use the current plugin's version.
