--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,3 +1,6 @@
+group 'com.example.wifi_state'
+version '1.0'
+
 buildscript {
     repositories {
         google()
@@ -9,19 +12,19 @@ buildscript {
     }
 }
 
-allprojects {
+rootProject.allprojects {
     repositories {
         google()
         jcenter()
     }
 }
 
-rootProject.buildDir = '../build'
-subprojects {
-    project.buildDir = "${rootProject.buildDir}/${project.name}"
-    project.evaluationDependsOn(':app')
-}
+apply plugin: 'com.android.library'
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
+android {
+    compileSdkVersion 30
+
+    defaultConfig {
+        minSdkVersion 16
+    }
 }
