--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,9 +27,11 @@ dependencies:
   equatable: ^2.0.3
   flutter_bloc: ^7.3.0
   floor: ^1.1.0
-  provider: ^6.0.0
+  provider: ^6.0.1
   todos_app_core:
     path: packages/todos_app_core/
+  firebase_core: ^1.10.2
+  firebase_auth: ^3.3.0
 
 dependency_overrides:
 
