--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,8 +36,12 @@ dependencies:
 dependency_overrides:
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
+  test: ^1.10.1
+  mockito: ^5.0.16
   floor_generator: ^1.1.0
   build_runner: ^2.0.4
 
